--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -39,7 +39,6 @@
                             android:background="@drawable/current_cons_label"
                             android:text="Consumo Actual:"
                             android:textColor="#FFFFFF"
-                            android:textSize="21px"
                             android:textStyle="bold" />
 
                         <LinearLayout style="@style/white_separator" >
@@ -51,15 +50,16 @@
                             android:background="@drawable/main_bg1"
                             android:paddingLeft="10dp"
                             android:text="500W"
+                            android:layout_height="wrap_content"
                             android:textColor="@color/app_main_dark"
-                            android:textSize="21px" />
+                            />
                     </LinearLayout>
 
                     <android.prsma.org.energyspectrum.customUI.SummaryWidget
                         android:id="@+id/frag_summaryWidget"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_weight="0.9"
-                        android:layout_margin="15sp"
+                        android:padding="15sp"
                         android:layout_height="0sp"
                         />
                 </LinearLayout>
@@ -74,6 +74,7 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="5sp"
                         android:background="#000000" >
                     </LinearLayout>
 
@@ -87,9 +88,10 @@
                             android:layout_width="fill_parent"
                             android:background="@drawable/main_bg2"
                             android:padding="2dp"
+                            android:layout_height="wrap_content"
                             android:text=" Consumo Actual VS Passado"
                             android:textColor="#000000"
-                            android:textSize="21px" />
+                             />
 
                         <android.prsma.org.energyspectrum.customUI.SummaryComparisonWidget
                             android:id="@+id/frag_summaryCompWidget"
