--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,28 +8,189 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="android.prsma.org.energyspectrum.mainActivities.HomeActivity$PlaceholderFragment">
-
-    <TextView
-        android:id="@+id/days_chart_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Consumo de hoje / Média (kWh)"/>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <android.prsma.org.energyspectrum.customUI.ConsumptionChart
-        android:id="@+id/consumption_chart"
-        android:layout_width="0sp"
-        android:layout_weight="0.5"
         android:layout_height="match_parent"
-        />
+        android:fillViewport="true">
+
         <LinearLayout
-            android:layout_width="0sp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"></LinearLayout>
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <TextView
+                style="@style/table_item_label"
+                android:layout_weight="0.49"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/current_cons_label"
+                android:text="Consumo de hoje / Média (kWh)"
+                android:padding="5sp"
+                android:layout_marginBottom="5sp"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_weight="0.49"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.prsma.org.energyspectrum.customUI.ConsumptionChart
+                    android:id="@+id/consumption_chart"
+                    android:layout_width="0sp"
+                    android:layout_weight="0.49"
+                    android:layout_height="match_parent"
+                    />
+
+                <LinearLayout
+                    android:layout_width="1sp"
+                    android:layout_height="match_parent"
+                    android:background="#000000"
+                    android:layout_margin="10sp"/>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.49">
+
+                    <!-- TOTAL CONSUMPTION LABEL -->
+                    <TextView
+                        style="@style/table_item_label"
+                        android:layout_width="fill_parent"
+                        android:background="@drawable/main_bg2"
+                        android:padding="2dp"
+                        android:layout_height="wrap_content"
+                        android:text="Total"
+                        android:textColor="#000000"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10sp">
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="200 kWh"/>
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="10€"/>
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="2g CO2"/>
+                    </LinearLayout>
+                        <!-- COMPARISON CONSUMPTION LABEL -->
+                    <TextView
+                        style="@style/table_item_label"
+                        android:layout_width="fill_parent"
+                        android:background="@drawable/main_bg2"
+                        android:padding="2dp"
+                        android:layout_height="wrap_content"
+                        android:text="Comparison:"
+                        android:textColor="#000000"
+                        />
+                    <LinearLayout
+                        style="@style/table_item_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10sp">
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="+ 10% than yesterday"/>
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="- 5% than your average"/>
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="lowest consumption day in a month"/>
+                    </LinearLayout>
+                    <!-- PEAK CONSUMPTION LABEL -->
+                    <TextView
+                        style="@style/table_item_label"
+                        android:layout_width="fill_parent"
+                        android:background="@drawable/main_bg2"
+                        android:padding="2dp"
+                        android:layout_height="wrap_content"
+                        android:text="Peak:"
+                        android:textColor="#000000"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10sp">
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="between 10:00 and 12:00"/>
+
+                    </LinearLayout>
+
+                    <!-- RENEWABLE CONSUMPTION LABEL -->
+                    <TextView
+                        style="@style/table_item_label"
+                        android:layout_width="fill_parent"
+                        android:background="@drawable/main_bg2"
+                        android:padding="2dp"
+                        android:layout_height="wrap_content"
+                        android:text="Renewable energy:"
+                        android:textColor="#000000"
+                        />
+                    <TextView
+                        style="@style/table_item_body"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="20% of renewable"/>
+                    <LinearLayout
+                        style="@style/table_item_body"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10sp">
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="5% solar"/>
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="10% hydro"/>
+                        <TextView
+                            style="@style/table_item_body"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="5% wind"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
+    </ScrollView>
 </LinearLayout>
