--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
         <item name="android:layout_height">40px</item>
         <item name="android:layout_width">160dp</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">9pt</item>
+        <item name="android:textSize">12pt</item>
         <item name="android:paddingLeft">30px</item>
         <item name="android:gravity">center_vertical</item>
     </style>
@@ -89,6 +89,17 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">8pt</item>
         <item name="android:paddingLeft">3px</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="table_item_body">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0sp</item>
+        <item name="android:layout_weight">0.33</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">8pt</item>
+        <item name="android:layout_marginBottom">3sp</item>
+        <item name="android:layout_marginTop">3sp</item>
         <item name="android:gravity">center_vertical</item>
     </style>
 
