--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <android.prsma.org.energyspectrum.customUI.ConsumptionChart
+                <android.prsma.org.energyspectrum.customUI.LineConsumptionChart
                     android:id="@+id/consumption_chart"
                     android:layout_width="0sp"
                     android:layout_weight="0.49"
