--- a/app/src/main/res/layout/fragment_production.xml
+++ b/app/src/main/res/layout/fragment_production.xml
@@ -54,7 +54,8 @@
                     android:layout_width="30px"
                     android:layout_height="30px"
                     android:layout_marginBottom="2dp"
-                    android:src="@drawable/solar_icon" />
+                    android:src="@drawable/solar_icon"
+                    android:layout_gravity="center_vertical"/>
 
                 <LinearLayout
                     android:layout_width="10dp"
@@ -84,7 +85,8 @@
                 <ImageView
                     android:layout_width="30px"
                     android:layout_height="30px"
-                    android:src="@drawable/water_icon" />
+                    android:src="@drawable/water_icon"
+                    android:layout_gravity="center_vertical"/>
 
                 <LinearLayout
                     android:layout_width="10dp"
@@ -114,7 +116,8 @@
                 <ImageView
                     android:layout_width="30px"
                     android:layout_height="30px"
-                    android:src="@drawable/wind_icon" />
+                    android:src="@drawable/wind_icon"
+                    android:layout_gravity="center_vertical"/>
 
                 <LinearLayout
                     android:layout_width="10dp"
@@ -144,7 +147,8 @@
                 <ImageView
                     android:layout_width="30px"
                     android:layout_height="30px"
-                    android:src="@drawable/thermal_icon" />
+                    android:src="@drawable/thermal_icon"
+                    android:layout_gravity="center_vertical"/>
 
                 <LinearLayout
                     android:layout_width="10dp"
