maximize day chart

--- a/app/src/main/res/layout/fragment_day_consumption.xml
+++ b/app/src/main/res/layout/fragment_day_consumption.xml
@@ -36,15 +36,24 @@
                 <LinearLayout
                     android:layout_weight="0.49"
                     android:layout_width="0sp"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/maximize_chart_day"
+                        android:text="Full screen"/>
+                    </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:id="@+id/day_chart_container"
+                >
                 <LinearLayout
                     android:layout_width="0sp"
                     android:layout_weight="0.49"
+                    android:id="@+id/day_chart_containe2"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
                     <android.prsma.org.energyspectrum.customUI.LineConsumptionChart
@@ -69,10 +78,12 @@
                     android:layout_margin="10sp"/>
 
                 <LinearLayout
+                    android:id="@+id/day_side_bar"
                     android:orientation="vertical"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.49">
+                    android:layout_weight="0.49"
+                    >
 
                     <!-- TOTAL CONSUMPTION LABEL -->
                     <TextView
